--- a/src/app/places/leases/new-lease/new-lease.page.html
+++ b/src/app/places/leases/new-lease/new-lease.page.html
@@ -87,6 +87,14 @@
                 </ion-item>
               </ion-col>
           </ion-row>
+          <ion-row>
+              <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                  <ion-label (ionChange)="getImageDetails($event)" position="floating">Attach Lease</ion-label>
+                  <ion-input type="file"></ion-input>
+                </ion-item>
+              </ion-col>
+          </ion-row>
     </ion-grid>
   </form>
 </ion-content>
