--- a/src/app/places/properties/edit-property/edit-property.page.html
+++ b/src/app/places/properties/edit-property/edit-property.page.html
@@ -13,13 +13,16 @@
 </ion-header>
       
 <ion-content padding>
-    <ion-grid no-padding>
+    <!-- <ion-grid no-padding>
         <ion-row>
             <ion-col size-sm="12" text-center>
                 <strong>Property Details</strong>
             </ion-col>
         </ion-row>
-    </ion-grid>
+    </ion-grid> -->
+    <ion-card-header padding>
+        <ion-card-subtitle text-center>Property Details</ion-card-subtitle>
+    </ion-card-header>
     
     <form *ngIf="property" [formGroup]="form">
         <ion-grid>
@@ -72,13 +75,16 @@
         </ion-row>
     </ion-grid>
     
-    <ion-grid padding>
+    <!-- <ion-grid padding>
         <ion-row>
             <ion-col size-sm="12" text-center>
                 <strong>Yearly Expenses</strong>
             </ion-col>
         </ion-row>
-    </ion-grid>
+    </ion-grid> -->
+    <ion-card-header padding>
+        <ion-card-subtitle text-center>Yearly Expenses</ion-card-subtitle>
+    </ion-card-header>
         
     <ion-grid>
         <ion-row>
