--- a/src/app/places/properties/new-property/new-property.page.html
+++ b/src/app/places/properties/new-property/new-property.page.html
@@ -14,13 +14,16 @@
       
 <ion-content padding>
 
-<ion-grid no-padding>
+<!-- <ion-grid no-padding>
     <ion-row>
         <ion-col size-sm="12" text-center>
             <strong>Property Details</strong>
         </ion-col>
     </ion-row>
-</ion-grid>
+</ion-grid> -->
+<ion-card-header padding>
+    <ion-card-subtitle text-center>Property Details</ion-card-subtitle>
+</ion-card-header>
 
 <form [formGroup]="form">
     <ion-grid>
@@ -73,13 +76,16 @@
     </ion-row>
 </ion-grid>
 
-<ion-grid padding>
+<!-- <ion-grid padding>
     <ion-row>
         <ion-col size-sm="12" text-center>
             <strong>Yearly Expenses</strong>
         </ion-col>
     </ion-row>
-</ion-grid>
+</ion-grid> -->
+<ion-card-header padding>
+    <ion-card-subtitle text-center>Yearly Expenses</ion-card-subtitle>
+</ion-card-header>
   
 <ion-grid>
     <ion-row>
