--- a/src/app/places/leases/lease-details/lease-details.page.html
+++ b/src/app/places/leases/lease-details/lease-details.page.html
@@ -28,6 +28,11 @@
                         Edit Lease
                     </ion-item>
             </ion-item-sliding>
+            <ion-item-sliding>
+                <ion-item [routerLink]="['/', 'places', 'tabs', 'leases', 'payment', lease.id]">
+                    Add Lease Payment
+                </ion-item>
+        </ion-item-sliding>
         </ion-list>
     <ion-card-header padding>
         <ion-card-subtitle text-center>Lease Details</ion-card-subtitle>
