--- a/src/app/places/leases/new-lease/new-lease.page.html
+++ b/src/app/places/leases/new-lease/new-lease.page.html
@@ -90,8 +90,9 @@
           <ion-row>
               <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
-                  <ion-label (ionChange)="getImageDetails($event)" position="floating">Attach Lease</ion-label>
-                  <ion-input type="file"></ion-input>
+                  <!-- <ion-label position="floating">Attach Lease <ion-icon name="document" slot="icon-only"></ion-icon></ion-label> -->
+                  <!-- <ion-button (ionChange)="upload($event)" name="leaseDoc" id="lease-upload" type="file"></ion-input> -->
+                    <ion-button (ionChange)="upload($event)">Attach Lease</ion-button>
                 </ion-item>
               </ion-col>
           </ion-row>
