--- a/src/app/places/properties/property-details/property-details.page.html
+++ b/src/app/places/properties/property-details/property-details.page.html
@@ -23,7 +23,8 @@
                 </ion-item>
             </ion-item-sliding>
           <ion-item-sliding>
-              <ion-item [routerLink]="['/', 'places', 'tabs', 'leases', 'new']">
+              <ion-item (click)="selectDocumentOrPhoto()"
+              [routerLink]="['/', 'places', 'tabs', 'leases', 'new']">
                   Add Lease
               </ion-item>
             </ion-item-sliding>
