camera preview working

--- a/src/app/places/leases/new-lease/new-lease.page.scss
+++ b/src/app/places/leases/new-lease/new-lease.page.scss
@@ -2,7 +2,7 @@
     white-space: normal !important;
 }
 
-#lease-upload{
-    position: absolute;
-    opacity: 0;
-  }
+// #lease-upload{
+//     position: absolute;
+//     opacity: 0;
+//   }
