--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -2,6 +2,12 @@
   <widget version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
   <access origin="*" />
   
+  <feature name="CameraPreview">
+    <param name="android-package" value="com.cordovaplugincamerapreview.CameraPreview"/>
+    <param name="onload" value="true"/>
+  </feature>
+
+
   <feature name="Chooser">
     <param name="android-package" value="com.cyph.cordova.Chooser"/>
   </feature>
@@ -15,12 +21,6 @@
 
   <feature name="FileTransfer">
     <param name="android-package" value="org.apache.cordova.filetransfer.FileTransfer"/>
-  </feature>
-
-
-  <feature name="FilePath">
-    <param name="android-package" value="com.hiddentao.cordova.filepath.FilePath"/>
-    <param name="onload" value="true"/>
   </feature>
 
   </widget>
