--- a/src/app/places/leases/new-lease/new-lease.page.html
+++ b/src/app/places/leases/new-lease/new-lease.page.html
@@ -90,9 +90,7 @@
           <ion-row>
               <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
-                  <!-- <ion-label position="floating">Attach Lease <ion-icon name="document" slot="icon-only"></ion-icon></ion-label> -->
-                  <!-- <ion-button (ionChange)="upload($event)" name="leaseDoc" id="lease-upload" type="file"></ion-input> -->
-                    <ion-button (click)="upload()">Attach Lease</ion-button>
+                    <ion-button (click)="startCamera()">Attach Lease</ion-button>
                 </ion-item>
               </ion-col>
           </ion-row>
