--- a/src/app/places/expenses/new-expense/new-expense.page.html
+++ b/src/app/places/expenses/new-expense/new-expense.page.html
@@ -68,13 +68,13 @@
                     </ion-item>
                 </ion-col>
             </ion-row>
-        <ion-row>
-            <ion-col size-sm="12" offset-sm="0">
-                <ion-item>
-                    Add Attachment
-                </ion-item>
-            </ion-col>
-        </ion-row>
+            <ion-row>
+                <ion-col size-sm="12" offset-sm="0">
+                  <ion-item>
+                    <ion-button (click)="selectDocumentOrPhoto()">Attach Receipt</ion-button>
+                  </ion-item>
+                </ion-col>
+            </ion-row>
     </ion-grid>
       
     </form>
