--- a/src/app/places/leases/edit-lease/edit-lease.page.html
+++ b/src/app/places/leases/edit-lease/edit-lease.page.html
@@ -81,6 +81,27 @@
                 </ion-item>
               </ion-col>
           </ion-row>
+          <ion-row>
+              <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                    <ion-button (click)="viewLeaseDocument()">View Lease</ion-button>
+                </ion-item>
+              </ion-col>
+          </ion-row>
+            <ion-row>
+              <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                    ERROR {{ error | json }}
+                </ion-item>
+              </ion-col>
+          </ion-row>
+          <ion-row>
+              <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                    FILE {{ downloadedFile | json }}
+                </ion-item>
+              </ion-col>
+          </ion-row>
     </ion-grid>
   </form>
 </ion-content>
