--- a/src/app/places/leases/lease-details/lease-details.page.html
+++ b/src/app/places/leases/lease-details/lease-details.page.html
@@ -20,7 +20,7 @@
                 </ion-item-sliding> -->
                 <ion-item-sliding>
                     <ion-item [routerLink]="['/', 'places', 'tabs', 'documents', 'new']">
-                        Add Document
+                        Add Document (NOT FUNCTIONAL)
                     </ion-item>
             </ion-item-sliding>
             <ion-item-sliding>
@@ -29,7 +29,7 @@
                     </ion-item>
             </ion-item-sliding>
             <ion-item-sliding>
-                <ion-item [routerLink]="['/', 'places', 'tabs', 'leases', 'payment', lease.id]">
+                <ion-item [routerLink]="['/', 'places', 'tabs', 'leases', lease.id, 'payment']">
                     Add Lease Payment
                 </ion-item>
         </ion-item-sliding>
