--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -1,9 +1,9 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="notifications">
+    <!-- <ion-tab-button tab="notifications">
       <ion-label>Notifications</ion-label>
         <ion-icon name="notifications"></ion-icon>
-    </ion-tab-button>
+    </ion-tab-button> -->
     <ion-tab-button tab="properties">
         <ion-label>Properties</ion-label>
         <ion-icon name="home"></ion-icon>
