--- a/src/app/places/properties/property-details/property-details.page.html
+++ b/src/app/places/properties/property-details/property-details.page.html
@@ -34,7 +34,7 @@
               </ion-item-sliding>
               <ion-item-sliding>
                 <ion-item [routerLink]="['/', 'places', 'tabs', 'documents', 'new']">
-                    Add Document
+                    Add Document (NOT FUNCTIONAL)
                 </ion-item>
               </ion-item-sliding>
               <ion-item-sliding>
