--- a/src/app/places/leases/lease-payment/lease-payment.page.html
+++ b/src/app/places/leases/lease-payment/lease-payment.page.html
@@ -46,7 +46,7 @@
             <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
                 <ion-label position="floating">Amount</ion-label>
-                <ion-input type="number" formControlName="amount"></ion-input>
+                <ion-input type="number" formControlName="amountPaid"></ion-input>
                 </ion-item>
             </ion-col>
         </ion-row>
